# infoml

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  analysis.py  binf.py  pyproject.toml  utils.py
.github/workflows/: CI-CD.yml  CI.yml  documentation.yml  pypi.yml  static.yml  todo2issue.yml  workflow.yml
Python/: README.md  ToolBox.py
R/: main.R
ToolBox/: __init__.py  analysis.py  binf.py  utils.py
binf/: __init__.py  binf.py
bmes.ahmet/: README.txt  Untitled.ipynb  bmes.py  bmes_configure.php  bmes_configure.py  bmes_db.m  bmes_demo.php  bmes_pipinstall.py  bmes_test.ipynb
bmes.ahmet/.ipynb_checkpoints/: bmes_test-checkpoint.ipynb
bmes.ahmet/@bmes/: aa2int.m  bwaexe.m  downloadurl.m  firstexistentfile.m  firstexistentfolder.m  int2aa.m  io_head.m  io_isrealpath.m  isfile.m  isfileandnotempty.m  locateexe.m  numcputhreads.m  projdatadir.m  publish.m  pyexe.m  runjupyter.m  sanitizefilename.m  userhomedir.m  weka.m  wekafolder.m
bmes.ahmet/binf/: binf.py  binf_test.ipynb  sam_removesupplementary.m
bmes.ahmet/binf/.ipynb_checkpoints/: binf_test-checkpoint.ipynb
bmes.ahmet/cbe/: bmes_fig_scalefontsize.p  bmes_xlsread.p
bmes.ahmet/oldfiles/: bmes_ahmet_loader.py
bmes.ahmet/qsb/: bmes_downloadandparsegse.m  bmes_downloadandparsegse_cached.p  bmes_fastqdump.m  bmes_featurecounts.m  bmes_targetscandb_mir2target.py  bmes_targetscandb_mir2target_test.ipynb
bmes.ahmet/qsb/.ipynb_checkpoints/: bmes_targetscandb_mir2target_test-checkpoint.ipynb
bmes.ahmet/qsb/temp/: geo_demo.ipynb  geo_demo.mlx
bmes.ahmet/ta/: xls_addgradesandfeedback.m
doc-build/: Makefile  example.ipynb
docs/: .buildinfo  changelog.html  conduct.html  conf.py  contributing.html  example.html  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/.doctrees/autoapi/: index.doctree
docs/_modules/: index.html  infoml.html
docs/_modules/infoml/: datasets.html  pkg.html  utils.html
docs/_sources/autoapi/: index.rst.txt
docs/autoapi/: index.html  index.rst
docs/autoapi/binf/: index.rst
docs/autoapi/bmes/: index.rst
docs/autoapi/bmes_ahmet_loader/: index.rst
docs/autoapi/bmes_configure/: index.rst
docs/autoapi/bmes_pipinstall/: index.rst
docs/autoapi/bmes_targetscandb_mir2target/: index.rst
docs/autoapi/hcitools/: index.rst
docs/autoapi/infoml/: index.html  index.rst
hcitools/: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.cfg
hcitools/docs/: clustering.md  hcitools.html  heatmaps.md  search.js
hcitools/docs/assets/: clustering_figure_3.html  clustering_figure_4.html  heatmaps_figure_2.html  heatmaps_figure_3.html  heatmaps_figure_4.html
hcitools/docs/hcitools/: plot.html  preprocess.html  process.html
hcitools/hcitools/: __init__.py  analysis.py  plot.py  preprocess.py
hcitools/hcitools/datasets/: covid-cohort.tsv  ros-mito-timecourse.tsv
neuro/: __init__.py  cli.py  data.py  metrics.py  plot.py  stats.py  wrangling.py
src/infoml/: __init__.py  analysis.py  datasets.py  pkg.py  utils.py
src/infoml/binf/: __init__.py  binf.py  data.py
src/infoml/bmes.ahmet/: bmes.php  bmes.py  bmes_db_demo.m  bmes_db_demo.mlx  (+4 more)
tests/: test_datasets.py  test_infoml.py  test_utils.py
yusuf/: info.md
yusuf/QA/: heatMap.py  helpers.py  mergeImages.py  qaConnectivity.py  qaConnectomes.sh
yusuf/bctWrapper/: runMe.sh
(+86 files in other folders)
