[tool.poetry]
name = "infoml"
version = "0.1.0"
description = "Python package for bioinformatics analysis and machine learning."
authors = ["Tony Kabilan Okeke"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
