[tool.poetry]
name = "infoml"
version = "0.5.1"
description = "Python package for bioinformatics analysis and machine learning."
authors = ["Tony Kabilan Okeke"]
license = "MIT"
readme = "README.md"
exclude = ["src/.old"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.0.0"
scikit-learn = "^1.2.0"
scipy = "^1.9.3"
seaborn = "^0.12.2"
biopython = "^1.80"
geoparse = "^2.0.3"
tqdm = "^4.64.1"
requests = "^2.28.1"
pandas = "^1.5.2"
numpy = ">=1.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
ipython = "^8.7.0"
black = "^22.12.0"
python-semantic-release = "^7.32.2"
pre-commit = "^3.0.4"

[tool.semantic_release]
version_variable = "pyproject.toml:version"  # version location
branch = "main"                              # branch to make releases of
changelog_file = "CHANGELOG.md"              # changelog file
build_command = "poetry build"               # build dists
dist_path = "dist"                           # where to put dists
upload_to_release = true                     # auto-create GitHub release
upload_to_pypi = false                       # don't auto-upload to PyPI
remove_dist = false                          # don't remove dists after upload
patch_without_tag = true                     # make patch releases without tags

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
