[metadata]
name = hcitools
version = 0.2.2
author = Tony Kabilan Okeke
author_email = tonykabilanokeke@gmail.com
description = Tools for analyzing and visualizing high-content imaging data
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://mygithub.gsk.com/to561778/hci-tools
project_urls =
    Bug Tracker = https://mygithub.gsk.com/to561778/hci-tools/issues
    repository = https://mygithub.gsk.com/to561778/hci-tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    kaleido == 0.2.1
    moviepy == 1.0.3
    numpy == 1.23.1
    openpyxl == 3.0.10
    pandas == 1.4.3
    plotly == 5.10.0
    rich == 12.5.1
    scikit-learn == 1.1.1
    seaborn == 0.11.2
    umap-learn == 0.5.3

[options.package_data]
hcitools = 'datasets/*'
